No more mouse reset in menus and no more toLists